--- a/.choreo/component.yaml
+++ b/.choreo/component.yaml
@@ -1,6 +1,32 @@
 # +required The configuration file schema version
 schemaVersion: 1.0
 
+# +optional Incoming connection details for the component
+endpoints:
+  # +required Unique name for the endpoint.
+  # This name will be used when generating the managed API
+  - name: greeter-sample
+    # +optional Display name for the endpoint.
+    displayName: Go Greeter Sample
+    # +required Service section has the user service endpoint details
+    service:
+      # +optional Context (base path) of the API that gets exposed via the endpoint.
+      basePath: /
+      # +required Numeric port value that gets exposed via the endpoint
+      port: 8290
+    # +required Type of traffic that the endpoint is accepting.
+    # Allowed values: REST, GraphQL, WS, GRPC, TCP, UDP.
+    type: REST
+    # +optional Network level visibilities of the endpoint.
+    # Accepted values: Project|Organization|Public(Default).
+    networkVisibilities: 
+      - Public
+      - Organization
+    # +optional Path to the schema definition file. Defaults to wild card route if not provided
+    # This is only applicable to REST or WS endpoint types.
+    # The path should be relative to the docker context.
+    schemaFilePath: openapi.yaml
+
 dependencies:
     serviceReferences:
     - name: choreo:///yasithaorg/kwav/greeting-service-go/803f0/v1/PUBLIC
