--- a/.choreo/component.yaml
+++ b/.choreo/component.yaml
@@ -11,7 +11,7 @@ endpoints:
     # +required Service section has the user service endpoint details
     service:
       # +optional Context (base path) of the API that gets exposed via the endpoint.
-      basePath: /
+      basePath: /configs
       # +required Numeric port value that gets exposed via the endpoint
       port: 8290
     # +required Type of traffic that the endpoint is accepting.
@@ -25,12 +25,12 @@ endpoints:
     # +optional Path to the schema definition file. Defaults to wild card route if not provided
     # This is only applicable to REST or WS endpoint types.
     # The path should be relative to the docker context.
-    schemaFilePath: openapi.yaml
+    schemaFilePath: ConfigRetrievalAPI.yaml
 
 dependencies:
     serviceReferences:
-    - name: choreo:///yasithaorg/kwav/greeting-service-go/803f0/v1/PUBLIC
-      connectionConfig: 01f03bcc-c8fe-1e30-8216-11645361e2d1
+    - name: choreo:///yasithaorg/wtlh/greeting-service/8b1c3/v1/PUBLIC
+      connectionConfig: 01f03be2-703a-1450-97c9-748af1d71265
       env:
       - from: ServiceURL
         to: REDIS_SERVER_URL
