--- a/src/main/wso2mi/resources/conf/config.properties
+++ b/src/main/wso2mi/resources/conf/config.properties
@@ -1,5 +1,6 @@
 ADHOC_DB_USERNAME:string
-REDIS_SERVER_URL:string
-REDIS_SERVER_PORT:string
-TOKEN_URL:string
-API_KEY:string
+CONN_TKN_URL:string
+CONN_SVC_URL:string
+CONN_CON_KEY:string
+CONN_CON_SECRET:string
+CONN_API_KEY:string
